Modify printing from configration file

--- a/PdfGenerator/App.config
+++ b/PdfGenerator/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
+	<configSections>
+		<section name="Printings" type="PdfGenerator.Printing, PdfGenerator" />
+	</configSections>
+
+	<Printings>
+		<PrintImage image_filename=".\Background.png" />
+		<PrintImage image_filename=".\Orange round.png" x="300" y="100" width="100" height="10" />
+		<PrintImage image_filename=".\Blue rectangle.png" x="10" y="500" />
+		<PrintText text="Congratulation for being the " x="50" y="150" font_name="Times New Roman" font_size="22"/>
+		<PrintText text="Have a nice day!" x="50" y="190" color="Red" />
+	</Printings>
+
+	<startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 </configuration>
