--- a/PdfGenerator/PdfGenerator.csproj
+++ b/PdfGenerator/PdfGenerator.csproj
@@ -34,10 +34,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PositionPostfixProvider.cs" />
     <Compile Include="Printable\IPrintable.cs" />
     <Compile Include="Printable\IPrintImage.cs" />
     <Compile Include="Printable\IPrintText.cs" />
@@ -47,6 +50,7 @@
     <Compile Include="Printers\ImagePrinter.cs" />
     <Compile Include="Printers\TextPrinter.cs" />
     <Compile Include="Printers\PrinterBase.cs" />
+    <Compile Include="Printing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
