--- a/PdfGenerator/PdfGenerator.csproj
+++ b/PdfGenerator/PdfGenerator.csproj
@@ -42,17 +42,18 @@
   <ItemGroup>
     <Compile Include="PositionPostfixProvider.cs" />
     <Compile Include="Printable\IPrintable.cs" />
-    <Compile Include="Printable\IPrintImage.cs" />
-    <Compile Include="Printable\IPrintText.cs" />
-    <Compile Include="Printable\PrintText.cs" />
-    <Compile Include="Printable\PrintImage.cs" />
+    <Compile Include="Printable\PdfRectangle.cs" />
+    <Compile Include="Printable\PdfText.cs" />
+    <Compile Include="Printable\PdfImage.cs" />
     <Compile Include="Printer.cs" />
     <Compile Include="Printers\ImagePrinter.cs" />
+    <Compile Include="Printers\RectanglePrinter.cs" />
     <Compile Include="Printers\TextPrinter.cs" />
     <Compile Include="Printers\PrinterBase.cs" />
     <Compile Include="Printing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
