--- a/MultiPdfGeneration/App.config
+++ b/MultiPdfGeneration/App.config
@@ -8,11 +8,12 @@
 		<PrintImage image_filename=".\Background.png" />
 		<PrintImage image_filename=".\Orange round.png" x="300" y="100" width="100" height="10" />
 		<PrintImage image_filename=".\Blue rectangle.png" x="10" y="500" />
-		<PrintText text="Congratulation for being the " x="50" y="150" font_name="Times New Roman" font_size="22"/>
+		<PrintText text="Congratulation @Name for being the @Position" x="50" y="150" font_name="Times New Roman" font_size="22"/>
 		<PrintText text="Have a nice day!" x="50" y="190" color="Red" />
+		<PrintRectangle color="black" x="1" y="1" width="100" height="100" line_width="5" />
 	</Printings>
 
-	<startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+	</startup>
 </configuration>
