--- a/PdfGenerator/PdfGenerator.csproj
+++ b/PdfGenerator/PdfGenerator.csproj
@@ -43,13 +43,17 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Printables.cs" />
     <Compile Include="PrintablesProvider.cs" />
+    <Compile Include="Printable\ISizedPrintable.cs" />
     <Compile Include="Printable\IPrintable.cs" />
+    <Compile Include="Printable\PdfEllipse.cs" />
     <Compile Include="Printable\PdfRectangle.cs" />
     <Compile Include="Printable\PdfText.cs" />
     <Compile Include="Printable\PdfImage.cs" />
     <Compile Include="Printer.cs" />
     <Compile Include="Printers\ImagePrinter.cs" />
+    <Compile Include="Printers\EllipsePrinter.cs" />
     <Compile Include="Printers\RectanglePrinter.cs" />
     <Compile Include="Printers\TextPrinter.cs" />
     <Compile Include="Printers\PrinterBase.cs" />
