--- a/PrintPageEditor/PrintPageEditor.csproj
+++ b/PrintPageEditor/PrintPageEditor.csproj
@@ -87,5 +87,11 @@
       <Name>PdfGenerator</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\ChildPaint.xml" />
+    <Resource Include="Resources\CurriculumVitæ.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
