Add alternative multi line printing

--- a/PrintPageEditor/Resources/work_experience.yaml
+++ b/PrintPageEditor/Resources/work_experience.yaml
@@ -19,9 +19,9 @@
   full_name: Qualysoft Informatics d.o.o.
   from: 14/04/2014
   to: 05/2018
-  role: C# developer
+  role: C# developer (Ericsson contributor)
   projects:
-    - PCI (Ericsson contributor)
+    - PCI
 
 - ozeki:
   full_name: Ozeki Informatics Ltd.
