--- a/PrintPageEditor/Resources/work_experience.yaml
+++ b/PrintPageEditor/Resources/work_experience.yaml
@@ -6,7 +6,7 @@
   projects:
     - KertMester (https://play.google.com/store/apps/details?id=com.mortens.kertmester&pli=1)
     - VisualHotelManager
-    - H4ckW1thM3
+    - H4ckW1thM3 (https://play.google.com/store/apps/details?id=com.mortens.H4ckW1thM3&pli=1)
 
 - techysium:
   full_name: DNXperts Solution Ltd.
